--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/launchbadge/hedera-sdk-c"
 edition = "2018"
 keywords = ["hedera", "sdk", "rust"]
 authors = [
-    "LaunchBadge <contact@launchbadge.com> (PRIMARY)",
+    "LaunchBadge <contact@launchbadge.com>",
     "Lonestar Data Technologies <sam@lonestardata.io>"
 ]
 
